--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,230 +1,123 @@
 .main {
+  overflow: hidden;
+}
+
+.main p {
+  color: #1c1c1c;
+}
+
+.blurredFx {
+  position: absolute;
+  left: -10vw;
+  width: 40vw;
+  height: 200px;
+  background-color: rgb(225, 0, 255);
+  z-index: -1;
+  border-radius: 0px 100px 100px 0px;
+  filter: blur(170px);
+  opacity: 0.4;
+}
+
+.navbar {
+  position: absolute;
+  width: 100%;
+  height: 80px;
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
+.hero {
+  width: 100vw;
+  height: 100lvh;
+  max-width: 1920px;
+  padding-left: 100px;
+  padding-right: 100px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+  align-items: left;
+  flex-direction: column;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.heroLeft {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
+.paraph {
   font-weight: 600;
-  margin-bottom: 0.7rem;
+  font-size: 30px;
+  max-width: 40vw;
 }
 
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-  text-wrap: balance;
-}
-
-.center {
+.textSloganHeader {
+  position: relative;
+  width: fit-content;
+  font-size: 80px;
+  font-weight: 600;
   display: flex;
-  justify-content: center;
   align-items: center;
-  position: relative;
-  padding: 4rem 0;
+  justify-content: center;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background: -webkit-linear-gradient(30deg, #e100ff, #e5e5e5);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 0.7;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+.textSloganHeader p {
+  height: 80px;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.animation {
+  height: 80px;
+  overflow: hidden;
+  margin-left: 1rem;
 }
 
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+.animation > div > div {
+  height: 80px;
+  display: inline-block;
 }
 
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.animation div:first-child {
+  animation: text-animation 10s infinite;
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
+@keyframes text-animation {
+  0% {
+    margin-top: 0;
   }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
+  10% {
+    margin-top: 0;
   }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
+  20% {
+    margin-top: -97px;
   }
-
-  .card {
-    padding: 1rem 2.5rem;
+  30% {
+    margin-top: -97px;
   }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
+  40% {
+    margin-top: -194px;
   }
-
-  .center {
-    padding: 8rem 0 6rem;
+  60% {
+    margin-top: -194px;
   }
-
-  .center::before {
-    transform: none;
-    height: 300px;
+  70% {
+    margin-top: -194px;
   }
-
-  .description {
-    font-size: 0.8rem;
+  80% {
+    margin-top: -194px;
   }
-
-  .description a {
-    padding: 1rem;
+  90% {
+    margin-top: -194px;
   }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
+  100% {
+    margin-top: 0;
   }
 }
