--- a/src/app/components/home/navbar.module.css
+++ b/src/app/components/home/navbar.module.css
@@ -1,7 +1,15 @@
-.navbar {
+.container {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 80px;
+}
+.navbar {
   width: 100%;
   height: 80px;
+  max-width: 1366px;
   display: flex;
   justify-content: space-between;
   align-items: center;
