--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -1,6 +1,16 @@
 .container {
+  position: relative;
   width: 100vw;
   height: 100lvh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main {
+  position: relative;
+  width: 100vw;
+  height: 100lvh;
+  max-width: 1366px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,8 +20,8 @@
 
 .backButton {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 20px;
+  left: 20px;
   width: 50px;
   height: 50px;
   background-color: rgb(250, 250, 250);
@@ -67,7 +77,8 @@
 }
 
 .buttom {
-  width: 50%;
+  cursor: pointer;
+  width: 100%;
   height: 50px;
   margin-top: 10px;
   border: none;
