--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -24,7 +24,7 @@
   left: 20px;
   width: 50px;
   height: 50px;
-  background-color: rgb(250, 250, 250);
+  background-color: rgb(240, 240, 240);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,7 +34,7 @@
 .form {
   position: relative;
   min-width: 400px;
-  background-color: rgb(250, 250, 250);
+  background-color: rgb(240, 240, 240);
   padding: 40px 30px 40px 30px;
   border-radius: 15px;
   display: flex;
@@ -71,9 +71,14 @@
   width: 100%;
   height: 50px;
   border: none;
-  background-color: rgb(240, 240, 240);
+  background-color: rgb(230, 230, 230);
   border-radius: 15px;
   padding-left: 20px;
+  font-weight: 500;
+}
+
+.input:focus {
+  outline: none;
 }
 
 .buttom {
