--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -47,7 +47,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 25px;
   align-items: end;
 }
 
@@ -111,4 +111,14 @@
 
 .textButton:hover {
   color: #87189d;
+}
+
+.errorMsg {
+  position: absolute;
+  color: red;
+  font-size: 14px;
+  width: fit-content;
+  padding-left: 20px;
+  z-index: 10;
+  top: -20px;
 }
