--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -22,13 +22,9 @@
   position: absolute;
   top: 20px;
   left: 20px;
-  width: 50px;
-  height: 50px;
-  background-color: rgb(240, 240, 240);
   display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
+  width: fit-content;
+  height: fit-content;
 }
 
 .form {
