--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -87,6 +87,10 @@
   font-weight: 600;
   color: #fff;
   border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
 
 .moreInfo {
