--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -122,3 +122,27 @@
   z-index: 10;
   top: -20px;
 }
+
+.buttonsContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.githubLogin {
+  cursor: pointer;
+  width: 100%;
+  height: 50px;
+  border: none;
+  background-color: #1c1c1c;
+  font-weight: 600;
+  color: #fff;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
