--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -1,4 +1,4 @@
-.container {
+.main {
   position: relative;
   width: 100vw;
   height: 100lvh;
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
 }
-.main {
+.container {
   position: relative;
   width: 100vw;
   height: 100lvh;
@@ -43,8 +43,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 25px;
   align-items: end;
+  gap: 15px;
 }
 
 .title {
@@ -57,9 +57,16 @@
   font-size: 18px;
 }
 
-.inputContainer {
+.inputDiv {
   position: relative;
   width: 100%;
+}
+
+.inputContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .input {
@@ -81,7 +88,6 @@
   cursor: pointer;
   width: 100%;
   height: 50px;
-  margin-top: 10px;
   border: none;
   background-color: #87189d;
   font-weight: 600;
@@ -143,4 +149,10 @@
   justify-content: center;
   align-items: center;
   gap: 5px;
+}
+
+.oauthButtonContainer {
+  width: 100%;
+  display: flex;
+  gap: 15px;
 }
