--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -30,6 +30,7 @@
 .form {
   position: relative;
   min-width: 400px;
+  max-width: 400px;
   background-color: rgb(240, 240, 240);
   padding: 40px 30px 40px 30px;
   border-radius: 15px;
