--- a/src/app/alino-app/components/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar.module.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 25px;
 }
 
 .navbar {
@@ -15,4 +15,18 @@
   height: 100%;
   background-color: rgb(255, 255, 255);
   border-radius: 20px;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.SubjectsCardsSection {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.navbarTitle {
+  margin-left: 20px;
 }
