--- a/src/app/alino-app/components/navbar/subjects-cards.module.css
+++ b/src/app/alino-app/components/navbar/subjects-cards.module.css
@@ -1,4 +1,6 @@
 .subjectsCardsContainer {
+  position: relative;
+  overflow: hidden;
   background-color: rgb(240, 240, 240);
   border-radius: 15px;
   height: 45px;
