--- a/src/app/alino-app/components/navbar/subjects-cards.module.css
+++ b/src/app/alino-app/components/navbar/subjects-cards.module.css
@@ -8,5 +8,6 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 0px 20px 0px 20px;
+  padding: 0px 20px 0px 10px;
+  gap: 10px;
 }
