--- a/src/app/alino-app/components/navbar/subjects-cards.module.css
+++ b/src/app/alino-app/components/navbar/subjects-cards.module.css
@@ -10,4 +10,9 @@
   align-items: center;
   padding: 0px 20px 0px 10px;
   gap: 10px;
+  transition: background-color 0.3s ease-in-out;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
