--- a/src/app/alino-app/components/navbar/subjects-cards.module.css
+++ b/src/app/alino-app/components/navbar/subjects-cards.module.css
@@ -8,11 +8,14 @@
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 0px 20px 0px 10px;
+  padding: 0px 10px 0px 10px;
   gap: 10px;
   transition: background-color 0.3s ease-in-out;
   cursor: pointer;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+.subjectName {
+  font-size: 14px;
 }
