--- a/src/app/alino-app/components/navbar/subjects-input.module.css
+++ b/src/app/alino-app/components/navbar/subjects-input.module.css
@@ -3,32 +3,53 @@
   position: relative;
   justify-content: center;
   align-items: center;
+  background-color: rgb(240, 240, 240);
+  border-radius: 15px;
+  padding: 0px 10px 0px 10px;
 }
 .inputText {
   width: 100%;
   height: 45px;
-  border-radius: 15px;
   border: none;
-  background-color: rgb(240, 240, 240);
   cursor: pointer;
-  padding: 0px 0px 0px 10px;
   outline: none;
+  background-color: transparent;
+  font-size: 14px;
+  font-family: inherit;
+  color: #1c1c1c;
+}
+.colorButton {
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
 }
 .colorInput {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  height: 25px;
-  width: 25px;
+  height: 20px;
+  width: 20px;
   border: none;
   cursor: pointer;
-  position: absolute;
-  right: 10px;
   background-color: transparent;
 }
 .colorInput::-webkit-color-swatch {
   border-radius: 5px;
   border: none;
+  margin: 0;
+  padding: 0;
+}
+.colorInput::-webkit-color-swatch-wrapper {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+.colorInput::-moz-color-swatch-wrapper {
+  border: none;
+  margin: 0;
+  padding: 0;
 }
 .colorInput::-moz-color-swatch {
   border-radius: 5px;
