--- a/src/components/color-picker.module.css
+++ b/src/components/color-picker.module.css
@@ -35,6 +35,7 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  background-color: transparent;
 }
 .separator {
   width: 100%;
@@ -55,6 +56,7 @@
   cursor: pointer;
   background-color: none;
   border-radius: 7px;
+  background-color: transparent;
 }
 .customColorContainer {
   background-color: rgb(240, 240, 240);
@@ -65,6 +67,11 @@
   justify-content: center;
   gap: 7px;
 }
+.inputColorContainer {
+  position: relative;
+  width: 25px;
+  height: 25px;
+}
 .colorInput {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -74,6 +81,15 @@
   border: 0;
   cursor: pointer;
   background-color: transparent;
+  opacity: 0;
+}
+.labelColor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
 }
 .colorInput::-webkit-color-swatch {
   border-radius: 7px;
