--- a/src/app/(auth)/sign-in/login.module.css
+++ b/src/app/(auth)/sign-in/login.module.css
@@ -1,3 +1,9 @@
+.form {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 .inputs {
   position: relative;
   width: 100%;
