add home static group in navbar

--- a/src/app/alino-app/components/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar.module.css
@@ -1,6 +1,6 @@
 .navbarContainer {
-  position: absolute;
   width: 25vw;
+  min-width: 25vw;
   height: 100vh;
   display: flex;
   justify-content: center;
