--- a/src/app/alino-app/components/todo/todo-input.module.css
+++ b/src/app/alino-app/components/todo/todo-input.module.css
@@ -1,25 +1,33 @@
 .container {
+  position: relative;
   background-color: transparent;
   width: 100%;
-  height: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form {
+  width: 100%;
+  height: fit-content;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .input {
-  height: 45px;
-  width: 50%;
+  height: 50px;
+  width: 60%;
   border: none;
   background-color: rgb(240, 240, 240);
   font-family: "inter";
   color: #1c1c1c;
   padding-left: 20px;
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 15px 0px 0px 15px;
   outline: none;
 }
 .button {
   width: 50px;
-  height: 45px;
+  height: 50px;
   background-color: rgb(240, 240, 240);
   border: none;
   border-radius: 0px 15px 15px 0px;
