--- a/src/app/alino-app/components/todo/todo-input.module.css
+++ b/src/app/alino-app/components/todo/todo-input.module.css
@@ -18,7 +18,7 @@
   height: 50px;
   width: 60%;
   border: none;
-  background-color: rgb(240, 240, 240);
+  background-color: #ffffff;
   font-family: "inter";
   color: #1c1c1c;
   padding-left: 20px;
@@ -28,7 +28,7 @@
 .button {
   width: 50px;
   height: 50px;
-  background-color: rgb(240, 240, 240);
+  background-color: #ffffff;
   border: none;
   border-radius: 0px 15px 15px 0px;
 }
