update sidebar (navbar)

--- a/src/app/alino-app/components/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar.module.css
@@ -25,7 +25,14 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
+
+.SubjectsCardsSection::-webkit-scrollbar {
+  display: none;
+}
+
 .divCardsContainer {
   display: flex;
   flex-direction: column;
