--- a/src/app/alino-app/components/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar.module.css
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  overflow-y: scroll;
+  overflow: auto;
   padding: 0px 25px 0px 25px;
 }
 
