--- a/src/components/color-picker.module.css
+++ b/src/components/color-picker.module.css
@@ -20,6 +20,10 @@
   gap: 10px;
   padding: 15px;
   z-index: 100;
+  box-shadow:
+    rgba(12, 20, 66, 0.02) 0px 4px 12px,
+    rgba(12, 20, 66, 0.08) 0px 30px 80px,
+    rgb(230, 233, 237) 0px 0px 0px 0px inset;
 }
 .title {
   font-size: 12px;
