--- a/src/app/alino-app/components/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar.module.css
@@ -1,6 +1,6 @@
 .navbarContainer {
   width: 25vw;
-  min-width: 25vw;
+  min-width: 400px;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -15,7 +15,7 @@
   height: 100%;
   background-color: rgb(255, 255, 255);
   border-radius: 20px;
-  padding: 25px 0px 25px 0px;
+  padding: 40px 0px 40px 0px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -26,11 +26,13 @@
 }
 
 .SubjectsCardsSection {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 25px;
   overflow: auto;
-  padding: 0px 25px 0px 25px;
+  padding: 0px 40px 0px 40px;
 }
 
 .SubjectsCardsSection::-webkit-scrollbar {
