--- a/src/app/alino-app/components/navbar/subjects-cards.module.css
+++ b/src/app/alino-app/components/navbar/subjects-cards.module.css
@@ -1,6 +1,6 @@
 .subjectsCardsContainer {
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
   background-color: rgb(240, 240, 240);
   border-radius: 15px;
   height: 45px;
@@ -11,9 +11,9 @@
   padding: 0px 10px 0px 10px;
   gap: 10px;
   transition:
-    background-color 0.3s ease-in-out,
-    scale 0.1s ease-in-out,
-    transform 0.1s ease-in-out;
+    background-color 0.2s ease-in-out,
+    scale 0.2s ease-in-out,
+    box-shadow 0.2s ease-in-out;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
