--- a/src/lib/ui/icons.module.css
+++ b/src/lib/ui/icons.module.css
@@ -184,3 +184,10 @@
   }
 }
 /* END DELETE ICON SECTION */
+
+/* SEND ICON SECTION */
+
+.sendIcon:hover .sendIconChild {
+}
+
+/* END SEND ICON SECTION */
