--- a/src/components/color-picker.module.css
+++ b/src/components/color-picker.module.css
@@ -85,6 +85,9 @@
   position: relative;
   width: 25px;
   height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .colorInput {
   -webkit-appearance: none;
@@ -102,10 +105,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 0;
-  left: 0;
-  width: 22px;
-  height: 22px;
+  width: 18px;
+  height: 18px;
   cursor: pointer;
 }
 .colorInput::-webkit-color-swatch {
