--- a/src/components/color-picker.module.css
+++ b/src/components/color-picker.module.css
@@ -8,16 +8,17 @@
   right: -215px;
   top: -90px;
   position: absolute;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255, 0.7);
+  backdrop-filter: blur(5px);
   border: 1px solid rgb(240, 240, 240);
-  max-width: 180px;
+  max-width: 190px;
   width: fit-content;
   height: fit-content;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding: 15px 0px 15px 0px;
+  padding: 15px 5px 15px 5px;
   z-index: 100;
   box-shadow:
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
@@ -170,7 +171,7 @@
 }
 .saveButton {
   width: 100%;
-  background-color: #fff;
+  background-color: transparent;
   border: none;
   font-family: inter;
   font-size: 14px;
