--- a/src/components/color-picker.module.css
+++ b/src/components/color-picker.module.css
@@ -11,7 +11,8 @@
   background-color: rgb(255, 255, 255, 0.7);
   backdrop-filter: blur(5px);
   border: 1px solid rgb(240, 240, 240);
-  max-width: 300px;
+  max-width: 265px;
+  min-width: 265px;
   width: fit-content;
   height: fit-content;
   border-radius: 15px;
@@ -24,11 +25,15 @@
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
     rgba(12, 20, 66, 0.08) 0px 30px 80px,
     rgb(230, 233, 237) 0px 0px 0px 0px inset;
+  transition:
+    max-height 0.2s ease-in-out,
+    min-height 0.2s ease-in-out;
+  overflow: hidden;
 }
 .titleSection {
   padding: 0px 15px 0px 15px;
   display: flex;
-  gap: 10px;
+  gap: 5px;
 }
 .title {
   font-size: 12px;
@@ -38,8 +43,11 @@
   background-color: transparent;
   background: none;
   cursor: pointer;
-  padding: 5px;
+  padding: 5px 10px 5px 10px;
   border-radius: 5px;
+  transition:
+    box-shadow 0.2s ease-in-out,
+    color 0.2s ease-in-out;
 }
 .mainButton {
   width: 20px;
