--- a/src/app/alino-app/components/todo/todo.module.css
+++ b/src/app/alino-app/components/todo/todo.module.css
@@ -3,10 +3,19 @@
   height: 100%;
   border-radius: 20px;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+}
+.container {
+  width: 80%;
+  height: 100%;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
   justify-content: start;
   align-items: center;
-  flex-direction: column;
-  padding: 25px;
   gap: 30px;
 }
 .blurredReference {
