--- a/src/components/home/header.module.css
+++ b/src/components/home/header.module.css
@@ -1,16 +1,5 @@
-/* .blurredFx {
-  position: absolute;
-  left: -500px;
-  width: 400px;
-  height: 200px;
-  background-color: transparent;
-  z-index: -1;
-  border-radius: 0px 100px 100px 0px;
-  box-shadow: #87189d 300px 0px 300px;
-  opacity: 0.6;
-} */
-
 .container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,8 +9,8 @@
 
 .hero {
   position: relative;
-  width: 100vw;
-  height: 100lvh;
+  width: 100%;
+  height: 100%;
   max-width: 1366px;
   padding-left: 100px;
   padding-right: 100px;
@@ -46,7 +35,7 @@
   flex-direction: column;
   gap: 15px;
   margin-top: 50px;
-  width: 100%;
+  max-width: 450px;
 }
 
 .hero::before {
@@ -146,33 +135,40 @@
   }
 }
 .img {
-  width: 45vw;
+  width: 35vw;
+  max-width: 600px;
 }
 
 @media only screen and (max-width: 900px) {
+  .hero {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
   .heroLeft {
     flex-direction: column-reverse;
   }
   .ctaContainer {
     margin-top: 0px;
+    max-width: 100%;
+    margin-top: -30px;
   }
   .img {
-    margin-top: 0px;
-    width: 60vw;
     min-width: 370px;
+    width: 25vw;
   }
 }
 
-@media only screen and (max-width: 700px) {
-  .heroLeft {
-    gap: 15px;
-  }
-  .hero {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
+@media (max-width: 700px) {
   .textSloganHeader {
     font-size: 45px;
+  }
+
+  .paraph {
+    font-size: 25px;
+  }
+
+  .ctaContainer {
+    max-width: 100%;
   }
 
   .textSloganHeader p {
