--- a/src/components/home/header.module.css
+++ b/src/components/home/header.module.css
@@ -12,8 +12,8 @@
   width: 100%;
   height: 100%;
   max-width: 1366px;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 120px;
+  padding-right: 120px;
   display: flex;
   justify-content: center;
   align-items: left;
@@ -28,6 +28,24 @@
   /* gap: 25px; */
 }
 
+.h1Text {
+  position: relative;
+  width: fit-content;
+  font-size: 50px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background: -webkit-linear-gradient(30deg, #87189d, #e5e5e5);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 0.7;
+}
+
 .ctaContainer {
   display: flex;
   justify-content: center;
@@ -35,7 +53,7 @@
   flex-direction: column;
   gap: 15px;
   margin-top: 50px;
-  max-width: 450px;
+  width: 100%;
 }
 
 .hero::before {
