--- a/src/app/(auth)/auth.module.css
+++ b/src/app/(auth)/auth.module.css
@@ -1,15 +1,16 @@
 .main {
   position: relative;
   width: 100vw;
-  height: 100lvh;
+  height: 100svh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 .container {
   position: relative;
-  width: 100vw;
-  height: 100lvh;
+  width: 100%;
+  height: 100%;
   max-width: 1366px;
   display: flex;
   justify-content: center;
@@ -36,4 +37,15 @@
   border-radius: 15px;
   display: flex;
   flex-direction: column;
+}
+
+@media (max-width: 500px) {
+  .container {
+    padding: 0px 20px 0px 20px;
+  }
+  .form {
+    min-width: initial;
+    max-width: initial;
+    width: 100%;
+  }
 }
