add navbar mobile

--- a/src/app/alino-app/components/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar.module.css
@@ -58,8 +58,8 @@
   color: #1c1c1c;
 }
 
-@media (max-width: 900px) {
+/* @media (max-width: 900px) {
   .navbarContainer {
     display: none;
   }
-}
+} */
