--- a/src/app/alino-app/components/todo/todo.module.css
+++ b/src/app/alino-app/components/todo/todo.module.css
@@ -9,9 +9,10 @@
   padding: 25px;
 }
 .container {
-  width: 80%;
+  width: 100%;
+  max-width: 600px;
   height: 100%;
-  padding: 50px;
+  padding: 50px 0px 50px 0px;
   display: flex;
   flex-direction: column;
   justify-content: start;
