--- a/src/app/alino-app/components/navbar/navbar-mobile.module.css
+++ b/src/app/alino-app/components/navbar/navbar-mobile.module.css
@@ -7,15 +7,38 @@
   z-index: 9999;
 }
 .navbar {
+  position: relative;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: start;
   align-items: center;
   width: 100%;
-  height: 70px;
   background-color: rgb(255, 255, 255);
   border-radius: 20px;
+  min-height: 70px;
+  height: 100%;
   box-shadow:
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
     rgba(12, 20, 66, 0.08) 0px 30px 80px,
     rgb(230, 233, 237) 0px 0px 0px 0px inset;
+  animation: height 0.2s ease-in-out;
+  padding: 0px 20px 0px 20px;
+  overflow: hidden;
+}
+.top {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+}
+.navbarContent {
+  width: 100%;
 }
