--- a/src/components/home/tiles.module.css
+++ b/src/components/home/tiles.module.css
@@ -9,6 +9,8 @@
   background-color: rgb(250, 250, 250);
   border-radius: 20px;
   overflow: hidden;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .tilesContainer {
@@ -29,10 +31,13 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  font-size: 1em;
 }
 
 .tilesImg {
-  height: 80%;
+  /*height: 80%;*/
+  width: 65%;
+  min-width: 300px;
 }
 
 .tilesContainerLeft {
@@ -58,5 +63,67 @@
 }
 
 .tilesImgLeft {
-  height: 100%;
+  /*height: 100%;*/
+  width: 40%;
+  min-width: 150px;
+}
+
+@media only screen and (max-width: 900px) {
+  .tilesContainer {
+    position: relative;
+    height: 135px;
+    width: 100%;
+    border-radius: 15px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+  }
+
+  .textSection {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    width: 100%;
+    font-size: 10px;
+  }
+
+  .tilesImg {
+    height: 100%;
+    object-fit: contain;
+    min-width: initial;
+  }
+
+  .tilesContainerLeft {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    border-radius: 15px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+  }
+
+  .textSectionLeft {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+    width: 100%;
+    font-size: 10px;
+  }
+
+  .tilesImgLeft {
+    height: 100%;
+    object-fit: contain;
+    min-width: 130px;
+  }
 }
