--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family:
+    inter,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    sans-serif;
 }
 
 html,
