--- a/src/components/home/header.module.css
+++ b/src/components/home/header.module.css
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   width: 100vw;
-  height: 100lvh;
+  height: 100svh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -166,10 +166,10 @@
   .ctaContainer {
     margin-top: 0px;
     max-width: 100%;
-    margin-top: -30px;
+    gap: 10px;
   }
   .img {
-    min-width: 370px;
+    min-width: 300px;
     width: 25vw;
   }
 }
@@ -184,7 +184,7 @@
   }
 
   .h1Text {
-    font-size: 35px;
+    font-size: 30px;
   }
 
   .ctaContainer {
