add faq in home

--- a/src/components/home/content.module.css
+++ b/src/components/home/content.module.css
@@ -28,7 +28,7 @@
 }
 @media only screen and (max-width: 900px) {
   .maxWidthContainer {
-    width: 90%;
+    /* width: 90%; */
     margin: 30px 20px 100px 20px;
     height: fit-content;
   }
