--- a/src/components/accordion/accordion.module.css
+++ b/src/components/accordion/accordion.module.css
@@ -34,7 +34,7 @@
 
 .accordionHeader h3 {
   margin: 0;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
   color: rgb(28, 28, 28);
   user-select: none;
@@ -56,9 +56,7 @@
   padding: 15px 15px;
 }
 
-.accordionContent p {
-  padding: 15px 0;
-  margin: 0;
+.accordionContent {
   font-size: 16px;
   color: rgb(28, 28, 28);
 }
