--- a/src/components/home/footer.module.css
+++ b/src/components/home/footer.module.css
@@ -2,6 +2,7 @@
   width: 100vw;
   height: fit-content;
   background: linear-gradient(0deg, rgb(245, 245, 245) 50%, #fff);
+  margin-top: 100px;
 }
 
 .footerContent {
@@ -15,7 +16,7 @@
 }
 
 .img {
-  width: 300px;
+  width: 100px;
 }
 
 .footerStripeContainer {
@@ -39,6 +40,9 @@
 }
 
 @media only screen and (max-width: 900px) {
+  .footerStripeContainer {
+    padding: 30px 20px 30px 20px;
+  }
   .footerStripe {
     padding-left: 20px;
     padding-right: 20px;
