--- a/src/components/home/header.module.css
+++ b/src/components/home/header.module.css
@@ -157,7 +157,7 @@
   width: 100%;
   height: auto;
   max-width: 500px;
-  aspect-ratio: 1 / 1; /* o directamente 500 / 700 */
+  aspect-ratio: 1 / 1;
   object-fit: cover;
 }
 
