--- a/src/app/alino-app/components/navbar/navbar-mobile.module.css
+++ b/src/app/alino-app/components/navbar/navbar-mobile.module.css
@@ -16,7 +16,7 @@
   background-color: rgb(255, 255, 255);
   border-radius: 20px;
   min-height: 70px;
-  height: 100%;
+  height: 70px;
   box-shadow:
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
     rgba(12, 20, 66, 0.08) 0px 30px 80px,
@@ -24,6 +24,10 @@
   animation: height 0.2s ease-in-out;
   padding: 0px 20px 0px 20px;
   overflow: hidden;
+  transition: height 0.2s ease-in-out;
+}
+.active {
+  height: calc(100svh - 40px);
 }
 .top {
   width: 100%;
@@ -31,6 +35,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 70px;
+}
+.navbarContent {
+  width: 100%;
+  overflow: hidden;
 }
 .button {
   background-color: transparent;
@@ -38,7 +47,5 @@
   cursor: pointer;
   position: absolute;
   right: 20px;
-}
-.navbarContent {
-  width: 100%;
+  user-select: none;
 }
