--- a/src/app/alino-app/page.module.css
+++ b/src/app/alino-app/page.module.css
@@ -1,34 +1,14 @@
-.controls {
-  position: absolute;
-  background-color: rgb(100, 100, 100);
-  border: solid #1c1c1c 2px;
-  border-radius: 10px;
-  width: fit-content;
-  height: fit-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  bottom: 20px;
-  right: 20px;
+.container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 25px 25px 25px 0px;
 }
 
-.controlsContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-}
-
-.controlsButton {
-  border-radius: 100%;
-  width: 50px;
-  height: 50px;
-  border: none;
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 15px;
+@media only screen and (max-width: 850px) {
+  .container {
+    justify-content: start;
+    align-items: center;
+    padding: 25px 0px 0px 0px;
+  }
 }
