--- a/src/app/alino-app/components/config-section/config-section.module.css
+++ b/src/app/alino-app/components/config-section/config-section.module.css
@@ -5,6 +5,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2000;
+  user-select: none;
 }
 .configButton {
   width: 45px;
