--- a/src/app/alino-app/components/manager/manager.module.css
+++ b/src/app/alino-app/components/manager/manager.module.css
@@ -11,7 +11,8 @@
 
 .section1 {
   width: 100%;
-  height: 30%;
+  height: 25%;
+  min-height: 25%;
   display: flex;
   justify-content: center;
   align-items: end;
