--- a/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbarDesktop/navbar.module.css
@@ -1,4 +1,4 @@
-.navbarContainer {
+.container {
   width: 25vw;
   min-width: 400px;
   height: 100%;
@@ -26,19 +26,6 @@
     rgb(230, 233, 237) 0px 0px 0px 0px inset;
 }
 
-.SubjectsCardsSection {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  overflow: auto;
-  padding: 30px 40px 0px 40px;
-}
-
-.SubjectsCardsSection::-webkit-scrollbar {
-  display: none;
-}
-
 .logoContainer {
   width: 100%;
   display: flex;
@@ -47,13 +34,21 @@
   height: fit-content;
 }
 
-.divCardsContainer {
+.cardsSection {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  padding: 30px 40px 0px 40px;
+}
+
+.cardsSection::-webkit-scrollbar {
+  display: none;
+}
+
+.cardsContainer {
   display: flex;
   flex-direction: column;
   gap: 5px;
-}
-
-.navbarTitle {
-  margin-left: 0px;
-  color: #1c1c1c;
 }
