--- a/src/app/alino-app/components/navbar/navbarMobile/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbarMobile/navbar.module.css
@@ -6,6 +6,7 @@
   left: 0;
   z-index: 1000;
 }
+
 .navbar {
   position: relative;
   display: flex;
@@ -26,9 +27,11 @@
   overflow: hidden;
   transition: height 0.2s ease-in-out;
 }
+
 .active {
   height: calc(100svh - 40px);
 }
+
 .top {
   width: 100%;
   height: 70px;
@@ -37,6 +40,7 @@
   align-items: center;
   min-height: 70px;
 }
+
 .navbarContent {
   width: 100%;
   overflow: hidden;
@@ -55,4 +59,10 @@
   justify-content: center;
   align-items: center;
   -webkit-tap-highlight-color: transparent;
+}
+
+.cardsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
